# vox-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_cleaner.py  test_cli.py  test_hotkey.py  test_mcp_server.py  test_output.py  test_recorder.py  test_transcriber.py
vox/: __init__.py  cleaner.py  cli.py  hotkey.py  mcp_server.py  output.py  recorder.py  transcriber.py
