[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vox-cli"
version = "0.1.0"
description = "Voice comments for your terminal. Push-to-talk for Claude Code, Cursor, and any CLI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "beee003" }]
keywords = ["voice", "terminal", "cli", "speech-to-text", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pyperclip>=1.8.2",
    "pynput>=1.7.6",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
vox = "vox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vox"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
